Updated header descriptions

--- a/class_projects/Computational_Physics_labs/Barnes_Hut_tree.ipynb
+++ b/class_projects/Computational_Physics_labs/Barnes_Hut_tree.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This program recreates the Barnes-Hut algorithm using a Quad and Particle class. This improves the N-body simulation runtime to scale as NlogN. "
+    "# This program recreates the Barnes-Hut algorithm using a Quad and Particle class. The algorithm groups objects sufficiently far away as a single particle with a representative center of mass to improve the N-body simulation runtime to scale as NlogN. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![alt text](barnes_hut_diagram.png \"Barnes Hut Diagram\")"
    ]
   },
   {
