--- a/class_projects/Machine_Learning/Ay_119_HW_7.ipynb
+++ b/class_projects/Machine_Learning/Ay_119_HW_7.ipynb
@@ -2,23 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "collapsed": true,
-    "id": "ItLffD12qU1K",
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "# Ay119: Deep learning"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This assignment builds a deep learning classifier. "
+    "# This assignment builds a deep learning classifier to identify images as from a real signal, from a bogus signal, or of a playtpus."
    ]
   },
   {
